@@ -1,4 +1,4 @@
-$Id: History,v 1.7 2001-02-20 16:26:48 maire Exp $
+$Id: History,v 1.8 2001-02-21 14:44:33 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -15,6 +15,9 @@ track of all tags.
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 
+21-02-01  mma (testem5-V03-00-03)
+          - hbook histograms restored
+	  
 20-02-01 mma (testem5-V03-00-02)
          - verbose stepping adapted for STL
 	 - save rndm at begin of event 
